<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">OK SDK Example</string>

    <string name="error">Error</string>
    <string name="auth_cancelled">Authorization cancelled</string>

    <string name="login">Login (try SSO, then client OAUTH)</string>
    <string name="login_sso">Login via native SSO only</string>
    <string name="login_oauth">Login via client OAUTH only</string>
    <string name="call_users_get_current_user">Call users.getCurrentUser</string>
    <string name="call_user_get_friends">Call users.getFriends</string>
    <string name="post_widget">Post with posting widget</string>
    <string name="app_invite_widget">Invite friends to app widget</string>
    <string name="app_suggest_widget">Suggest app to friends widget</string>
    <string name="clear_tokens">Clear tokens</string>
    <string name="call_sdk_send_note">Call sdk.sendNote</string>
    <string name="call_report_payment">Call sdk.reportPayment</string>
    <string name="call_report_stats">Call sdk.reportStats</string>
</resources>